public class HelmetSensor {
    public static boolean isHelmetPresent() {
        return Math.random() > 0.2;
    }
}