public enum VehicleState {
    AVAILABLE,
    RESERVED,
    IN_USE,
    MAINTENANCE,
    EMERGENCY_LOCK,
    RELOCATING
}