public enum VehicleType {
    BYCICLE,
    ELECTRIC_SCOOTER,
    MOPED
}